# amazing-korean-api

./: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  AMK_PROJECT_JOURNAL.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  admin-agg-router.patch  auth-session.patch  deny.toml  deps-redis-bump.patch  docker-compose.prod.yml  support-bundle.txt  verify_refresh.sh
.claude/: settings.json
.gemini/: settings.json  settings.json.orig
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.sqlx/: query-1b42b86f56fb2cce02f90e22863d8b8839c4225c731ee2176989bafa54338e7d.json  query-1be25147bf1aa7090a0e8891f7d9c76d247376535d48eb913a4d589684a9a1f7.json  query-1dc13a110f9d916124abb11a73f05d4a9aced4b465ece77eff12188b826763e6.json  query-23eaad52b322fc73b2103b51bd79d2ccc0b3ccd3927ee1114c2c198af81bf6af.json  query-2b449f1a74915c123db4a0adcf38feb2f0604831d4a36221e47a742b207a072a.json  query-31284b44bbd17c63f07ac1a154271e939eb564d666e3ff0783f0073f348616d8.json  query-3dee4aa6ccfaea9da4a72fd7e29b9336e9bc738031e074d6c6125d3579f2df8d.json  query-4d4e4b933fe9b9e91e67c4ff20bd5e837b0ec8a7e69fae0a2a96912e0b4caad5.json  query-5117497ad0c466a0d382ca9fabb5f3e86c9dfd1d262e8eae3b589278a422a220.json  query-550475e1e8cb25127bbec91f6ea9210866ff1aa9f550be76bb0574e28278d18a.json  query-6c1d695d223c764260186adbda5889c8f5ff384905da1a92b273fcd722546fb4.json  query-94167b990066eccc97c758f11ca3acc3aa18bd3cb684a3fcd2be50c0f002e0b4.json  query-943de0a4b18ed91b995870471da38bbb1119368c18b8863dc2df623bafcc0561.json  query-9c03e14874724877c3bde64ace8b2b1f71945fe67f5cdc51e4dd7d71d254782a.json  query-a162d2905e0aa110891a76a2995113f3063de7813b2f9e550d7d3e53104da385.json  query-adeae112896f7114ccc23c996317bacb4c9d8e45328679cd52d0e351d0415391.json  query-b6e1ac1e1d446a20a227bc3c13bffc434e886a0bc4d797d0c33e5e2c20c4a4f4.json  query-bb12b974288088b58fdbb45e0f389ed4bb76ce2c1c446d2826fa4d706c3ea391.json  query-c4f1723b9c0e95e77764cefb7b5369448072cbbeed06c85a88e67cb4dda57a58.json  query-c5c2012bf6ca5f5e8d7e33ddf0cf54b25ef730892f57a0b79cb4278282981e48.json  query-ca7a9b8e7ae5af524a71c63668c07d8c4d7c2c8a7d79aae3f26ee02f871170ac.json  query-d97d8a76effe06953c78b6111686bae61b474f2648b635694861fca5c80ebd2a.json  query-e2825ff175580f9a8368bd64524ecec274f9dec3d3e95bb25be2430185cce39c.json  query-e4410f1940fc2550522de0bd89d3dd4eda61f723a145e2f327df7f8c6b4d79fd.json  query-e63c5589d48dba20e44998f1de0fcde88452fbfc638144e5e62a4c87674b8c4d.json  query-eeca4c0373a2c087bef78a6476f3ccd32b1c526d27a97b2d82990d01db4e700b.json  query-f35b5279e0ee152e32af999ef0f40250a02587ba8d304db344faf8b94a0f7e2c.json  query-f9a9b15473d55a9d6a775a0a7bb53e0317ecdf9e7c1549a6b0ccc838141bc2a6.json
crates/crypto/: Cargo.toml
crates/crypto/src/: blind_index.rs  cipher.rs  error.rs  lib.rs  service.rs
db-init/: 10_least_priv_role.sql
docs/: AGENTS.md  AMK_ADMIN_SESSION_MODEL_V2.md  AMK_AI_MISTAKES.md  AMK_API_AUTH.md  AMK_API_EBOOK.md  AMK_API_FUTURE.md  AMK_API_LEARNING.md  AMK_API_MASTER.md  AMK_API_PAYMENT.md  AMK_API_SECURITY_AUDIT.md  AMK_API_TEXTBOOK.md  AMK_API_USER.md  AMK_APP_ROADMAP.md  AMK_AUDIT_2026-05-04.md  AMK_AUDIT_2026-06-10_COMBINATION_DEFECTS.md  AMK_BACKEND_STATUS.md  AMK_BACKEND_STRICT_MODE_PROTOCOL.md  AMK_BOOK_LANDING.md  AMK_CHANGELOG.md  AMK_CODE_AUDIT_PLAN.md  AMK_CODE_AUDIT_RESULT.md  AMK_CODE_PATTERNS.md  AMK_CONTENT_SEGMENT_SPEC.md  AMK_DEBTS.md  AMK_DEPLOY_OPS.md  AMK_DESIGN_MD_ANALYSIS.md  AMK_DESIGN_SYSTEM.md  AMK_DOCS_DEVELOP_POINT.md  AMK_DOCS_RESTRUCTURE.md  AMK_EBOOK_SECURITY.md  AMK_FILE_TREE.md  AMK_FRONTEND.md  AMK_FRONTEND_STATUS.md  AMK_FRONTEND_STRICT_MODE_PROTOCOL.md  AMK_GSC_REDIRECT_FIX.md  AMK_GUIDE_CONTENT_DESIGN.md  AMK_INCIDENT_2026-05-30_MFA_REFRESH_REUSE.md  AMK_MACMINI_SETUP.md  AMK_MARKET_ANALYSIS.md  AMK_MEMORY_AUDIT.md  (+30 more)
ebook-pages/: .gitignore
frontend/: .env.example  .gitignore  DESIGN.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  qa-browser-test.mjs  qa-debug.mjs  qa-test.mjs  tailwind.config.js  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
k6/: README.md  config.js  scenario_load.js  scenario_smoke.js
migrations/: 20250812043521_init.sql  20250812052946_core_user_course_pay.sql  20250820022310_drop_unused_course_pay.sql  20250821005326_add_user_tables_and_logs.sql  20250821005843_users_birthday_to_date.sql  20250821010641_users_birthday_to_date.sql  20250821011843_users_birthday_to_date_fix.sql  20250821014115_users_birthday_type_guard.sql  20250821014549_users_birthday_force_date.sql  20250827050805_init.sql  20250829014203_amk_users.sql  20250901010843_amk_login.sql  20250904025818_amk_video.sql  20250904032227_amk_video_progress_stats.sql  20250905010353_alter_api_upsert_video_progress_return_type.sql  20251229_init_full.sql  20251230_add_compromised_login_state.sql  20251231_add_unique_constraint_video_log.sql  20251231_drop_login_id_from_video_log.sql  20260105_add_admin_action_log.sql  20260119_reset_study_task-log&status.sql  20260126_AMK_MVP_INIT.sql  20260128_ADD_VIDEO_VIMEO_FIELDS.sql  20260129_ADD_STUDY_ACCESS_LESSON_STATE_ACCESS.sql  20260131_ADD_DELETE_TO_ADMIN_ACTION_ENUM.sql  20260201_gemini_review_fixes.sql  20260202_ADD_COURSE_DOMAIN.sql  20260202_ADD_VIDEO_WATCH_DURATION.sql  20260203_ADD_OAUTH_SUPPORT.sql  20260208_AMK_V1.sql  20260208_AMK_V1_SEED.sql  20260210000001_i18n_content_translations.sql  20260210_i18n_add_video_content_type.sql  20260212_add_study_task_explain_content_type.sql  20260214_add_mfa_columns.sql  20260214_video_log_ip_type_fix.sql  20260215_payment_system.sql  20260226_textbook.sql  20260303_textbook_improvements.sql  20260310_add_tl_language.sql  (+28 more)
nginx/: nginx.conf
scripts/: backup.sh  bootstrap_sqlx_migrations.sql  build_guide_seed.py  check_env_consistency.sh  dev_preflight.sh  mk-support-bundle.sh
seeds/: 20260208_AMK_V1_SEED.sql  20260518_seed_textbook_studies.sql  20260518_seed_textbook_tasks.sql  explanation_seed.json
src/: config.rs  docs.rs  error.rs  extract.rs  lib.rs  main.rs  state.rs  trace_id.rs  types.rs
(+749 files in other folders)
