[package]
name = "amazing-korean-api"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features =  ["macros", "tokio", "http1", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "uuid"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.14"
tower = "0.5"
hyper = "1"
http = "1"
tower-http = { version = "0.6", features = ["cors"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
redis = { version = "0.26", features = ["tokio-comp"] }
deadpool-redis = "0.16"
axum-extra = { version = "0.10", features = ["cookie"] }
cookie = "0.18"
sha2 = "0.10"
base64 = { version = "0.22", default-features = false }
percent-encoding = "2"
rand = "0.8"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
# User-Agent parsing (server-side)
woothee = "0.13"
# AWS SES for email sending
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1"
