[workspace]
members = [".", "crates/crypto"]

# N-17: 명시 lint 룰 (workspace 전체). 보수적 시작 = anti-pattern 만 (현재 코드 위반 0건 확인).
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[package]
name = "amazing-korean-api"
version = "1.0.0"
edition = "2021"
license = "UNLICENSED"  # N-16: private repo, 외부 배포 차단 (Cargo publish block)
publish = false         # crates.io 게시 의도 X (private)
default-run = "amazing-korean-api"

[lints]
workspace = true

[dependencies]
amazing-korean-crypto = { path = "crates/crypto" }
axum = { version = "0.8.4", features =  ["macros", "tokio", "http1", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "uuid", "migrate"] }
uuid = { version = "1", features = ["v4", "v7"] }
anyhow = "1"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.14"
tower = "0.5"
hyper = "1"
http = "1"
tower-http = { version = "0.6", features = ["cors"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
redis = { version = "0.26", features = ["tokio-comp"] }
deadpool-redis = "0.16"
axum-extra = { version = "0.10", features = ["cookie"] }
cookie = "0.18"
sha2 = "0.10"
subtle = "2.6"  # N-8: constant-time comparison (Bearer 토큰 타이밍 공격 방지)
base64 = { version = "0.22", default-features = false }
percent-encoding = "2"
rand = "0.8"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
# User-Agent parsing (server-side)
woothee = "0.13"
# Blind Index (HMAC-SHA256) — user/service.rs, ebook/service.rs에서 직접 사용
hmac = "0.12"
# TOTP MFA (Google Authenticator)
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
# CLI tools (rekey binary)
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
# Paddle Billing SDK
paddle-rust-sdk = "0.17"
# E-book watermark (image processing)
image = { version = "0.25", default-features = false, features = ["webp", "png"] }
ab_glyph = "0.2"
imageproc = "0.25"

[[bin]]
name = "rekey_encryption"
path = "src/bin/rekey_encryption.rs"

[dev-dependencies]
# wiremock = HTTP mock server for OAuth integration tests (Google /token + /jwks)
wiremock = "0.6"
# rsa = generate test RSA keypair for signing fake Google ID tokens (JWT RS256).
# pem feature = export PKCS8 PEM (jsonwebtoken EncodingKey 입력 형식)
rsa = { version = "0.9", features = ["pem"] }
